typo in abstract

--- a/proposal/probprog-2020-proposal.tex
+++ b/proposal/probprog-2020-proposal.tex
@@ -94,7 +94,7 @@
   By unifying the common pre and post modelling toolset the workflow is simpler
   for both PPL designers and Bayesian practitioners. For practitioners it
   simplifies the steps after inference. For PPL designers it allows them to
-  focus on building their modelling langauge and inference, and deferring
+  focus on building their modelling language and inference, and deferring
   pre and post inference tasks to ArviZ.
 \end{abstract}
 
