fix probabilistic programming languages

--- a/proposal/probprog-2020-proposal.tex
+++ b/proposal/probprog-2020-proposal.tex
@@ -90,7 +90,7 @@
   libraries, calculate relevant diagnostics, or perform model checking.
   We therefore hope ArviZ will become a key tool in Bayesian analysis by
   providing users with computational tools to analyze and explore their results, and to
-  compare across different probabilistic programming libraries (PPL).
+  compare across different probabilistic programming languages (PPL).
   By unifying the common pre and post modelling toolset the workflow is simpler
   for both PPL designers and Bayesian practitioners. For practitioners it
   simplifies the steps after inference. For PPL designers it allows them to
