add extra compile options

--- a/models/pystan.ipynb
+++ b/models/pystan.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "prior_model = pystan.StanModel(model_code=prior_code)"
+    "prior_model = pystan.StanModel(model_code=prior_code, extra_compile_args=['-flto'])"
    ]
   },
   {
@@ -102,7 +102,7 @@
    ],
    "source": [
     "prior_data = {key: value for key, value in radon_data.items() if key not in (\"county_name\", \"y\")}\n",
-    "prior = prior_model.sampling(data=prior_data, iter=500, algorithm=\"Fixed_param\")"
+    "prior = prior_model.sampling(data=prior_data, iter=500, warmup=0, algorithm=\"Fixed_param\")"
    ]
   },
   {
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "stan_model = pystan.StanModel(model_code=radon_code)"
+    "stan_model = pystan.StanModel(model_code=radon_code, extra_compile_args=['-flto'])"
    ]
   },
   {
